Prevent canvas from taking up too much space

--- a/style.css
+++ b/style.css
@@ -12,10 +12,7 @@ input[type="number"] {
 
 #outCan {
     max-width: 100%;
-    max-height: 50%;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
+    max-height: 50vh;
 }
 
 svg {
